--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,10 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+../.DS_Store
+./
+.DS_Store
+explicacion.md
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
