dict empty class

--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,11 @@ cython_debug/
 ./
 .DS_Store
 explicacion.md
-
+explic.md
+explica.md
+./.vscode/
+        ./
+        
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
